# mosmetall.back

./: .gitignore  README.md  manage.py  pyproject.toml
docker/: Dockerfile  docker-compose.pro.yaml  docker-compose.yaml
scripts/: start_api.sh
src/domain/core/: constants.py
src/domain/core/routing/: options.py  router.py
src/domain/entities/: repositories.py
src/infrastructure/adminsite/catalogs/: admin.py
src/infrastructure/adminsite/certs/: admin.py
src/infrastructure/adminsite/news/: admin.py
src/infrastructure/adminsite/partners/: admin.py
src/infrastructure/adminsite/populars/: admin.py
src/infrastructure/adminsite/projects/: admin.py
src/infrastructure/adminsite/reviews/: admin.py
src/infrastructure/adminsite/services/: admin.py
src/infrastructure/api/routes/: urls.py
src/infrastructure/factories/catalogs/: factory.py
src/infrastructure/factories/certs/: factory.py
src/infrastructure/factories/forms/: factory.py
src/infrastructure/factories/news/: factory.py
src/infrastructure/server/: urls.py  wsgi.py
src/infrastructure/settings/: base.py  development.py  production.py
src/interface/repositories/: exceptions.py
src/interface/routes/: constants.py
src/usecases/catalogs/: interactor.py
src/usecases/certs/: interactor.py
src/usecases/forms/: interactor.py
src/usecases/news/: interactor.py
src/usecases/partners/: interactor.py
src/usecases/populars/: interactor.py
src/usecases/projects/: interactor.py
src/usecases/reviews/: interactor.py
src/usecases/services/: interactor.py
(+102 files in other folders)
