[tool.poetry]
name = "rolled metal products"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.4"
django = "^5.0.6"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
phonenumbers = "^8.13.40"
django-phonenumber-field = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
